//
// File hosting Sysvisorfs Protobuffer Definitions.
//
// Build dependencies:
//
// gRPC/protobuffer installation instructions:
//
// 1) Install gRPC package:
//
// $ go get -u google.golang.org/grpc
//
//
// 2) Install the protoc compiler that is used to generate gRPC service code.
//
// $ mkdir -p ~/bin/protoc
// $ cd ~/bin/protoc
// $ wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-linux-x86_64.zip
// $ unzip protoc-3.6.1-linux-x86_64.zip
// $ sudo cp -r include/* /usr/local/include/
// $ sudo cp bin/protoc /usr/local/bin/
// $ sudo chmod 755 /usr/local/bin/protoc         [ providing execution rights to all users ]
// $ sudo chmod -R 755 /usr/local/include/google  [ providing execution rights to all users ]
//
// temporary folder ~/bin/protoc can be now eliminated if desired:
// $ rm -rf ~/bin/protoc
//
//
// 3) Install protoc plugin for golang
//
// $ go get -u github.com/golang/protobuf/protoc-gen-go
//
// Make sure that PATH is properly set to cover $GOPATH/bin/:
//
// $ export PATH=$PATH:$GOPATH/bin
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.sysvisor.protobuf";
option java_outer_classname = "protobuf";

import "google/protobuf/timestamp.proto";

package protobuf;


// ContainerRegistration/Unregistration service definition.
service sysvisorStateChannel {

    // Generates a container-registration message
    rpc ContainerRegistration (ContainerData) returns (Response) {}

    // Generates a container-unregistration message
    rpc ContainerUnregistration (ContainerData) returns (Response) {}

    // Generates a container-update message
    rpc ContainerUpdate (ContainerData) returns (Response) {}
}

//
// Request message sent by runC to sysvisorfs process during container
// registration, unregistration and update phases.
//
message ContainerData {
  string Id                       = 1;
  int32 InitPid                   = 2;
  string Hostname                 = 3;
  google.protobuf.Timestamp Ctime = 4;
  int32 UidFirst                  = 5;
  int32 UidSize                   = 6;
  int32 GidFirst                  = 7;
  int32 GidSize                   = 8;
}

// Response message sent from sysvisorfs to runC process.
message Response {
  bool Success = 1;
}
